# everything

./: .gitignore  .pathignore  AGENTS.md  CLAUDE.md  README.md  icon-generator.html  index.html  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
01/1f32bb624f/: metadata.json
01/1f32bb624f/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
01/1f32bb624f/1/: context.md  metadata.json  prompt.txt
01/1f32bb624f/2/: metadata.json
01/1f32bb624f/3/: content_hash.txt  context.md  full.jsonl  metadata.json
01/1f32bb624f/4/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
03/7475d7fd7f/: metadata.json
03/7475d7fd7f/0/: context.md  full.jsonl  metadata.json  prompt.txt
03/7475d7fd7f/1/: content_hash.txt  metadata.json
03/7475d7fd7f/2/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
04/f3687c225b/: metadata.json
04/f3687c225b/0/: metadata.json
04/f3687c225b/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
04/f3687c225b/2/: metadata.json
04/f3687c225b/3/: metadata.json
12/3884e9abde/: metadata.json
16/6627947398/: metadata.json
30/d2ad3b9d47/: metadata.json
3a/0cda2992ca/: metadata.json
3a/d31bb9c195/: metadata.json
43/6ae1b1a2d6/: metadata.json
58/fe448ab243/: metadata.json
59/589a50e414/: metadata.json
5f/a1c57eb812/: metadata.json
62/9f4cacaf5c/: metadata.json
6f/952db67606/: metadata.json
70/c3aa0443f0/: metadata.json
77/ff01e337fe/: metadata.json
7d/96ce682219/: metadata.json
7e/62deb8feea/: metadata.json
82/ac10b34b32/: metadata.json
83/86fd0a6cb1/: metadata.json
89/a14b92b996/: metadata.json
8d/45d43a5bfc/: metadata.json
9b/32fdb6fb1c/: metadata.json
b2/02c9d82f4c/: metadata.json
b2/6a540ab59b/: metadata.json
c7/dff00f0c6e/: metadata.json
c8/301feb2881/: metadata.json
d8/f57d6aeab9/: metadata.json
doc/: architecture.md  architecture_KR.md  benchmark-ui-less-2026-02-17.md  optimization#1.md  optimization#2.md  optimization#4.md  optimization#5-incremental-index.md  optimization3.md  review#1.md  review#2.md  review#3.md  review#4.md  spec.md  spec_KR.md  windows_plan.md
doc/icon-candidates/: README.md
e5/c2a735197b/: metadata.json
ed/c00eba7ad2/: metadata.json
everything.icon/: icon.json
scripts/: build-windows.ps1  build_dmg.sh
src/: App.svelte  main.js  search-utils.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icons.pen
src-tauri/src/: daemon.rs  fd_search.rs  fsevent_watcher.rs  gitignore_filter.rs  main.rs  mcp_server.rs  mem_search.rs  pathindexing.rs  query.rs  rescan.rs  spotlight_search.rs
src-tauri/src/mac/: fsevent_watcher.rs  mod.rs  spotlight_search.rs
src-tauri/src/win/: com_guard.rs  context_menu.rs  icon.rs  mft_indexer.rs  mod.rs  nonadmin_indexer.rs  path_resolver.rs  rdcw_watcher.rs  search_catchup.rs  usn_watcher.rs  volume.rs
src-tauri/tests/: bench_search.rs  ux_bench.rs
(+222 files in other folders)
