[package]
name = "everything"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fsevent-sys = "4"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "hooks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
trash = "5"
jwalk = "0.8"
walkdir = "2"
tauri-plugin-drag = "2.1.0"
tauri-plugin-window-state = "2"
ignore = "0.4.25"
window-vibrancy = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
