[package]
name = "everything"
version = "0.3.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "hooks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
trash = "5"
jwalk = "0.8"
walkdir = "2"
tauri-plugin-drag = "2.1.0"
tauri-plugin-window-state = "2"
ignore = "0.4.25"
tauri-plugin-decorum = "1.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
fsevent-sys = "4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
] }
notify = "7"
rayon = "1"
png = "0.17"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
